--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,14 +28,14 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - runs: npm test
+    - run: npm test
   deploy: 
-    needs:build 
+   needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@3.12.12 
+      - uses: akhileshns/heroku-deploy@v3.12.12
         with:
-          heroku_api_key: ${{secrets.HEROKU_APIKEY}}
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "khemika-github-action-02"
-          heroku_email: "61160087@go.buu.ac.th"  
+          heroku_email: "61160087@go.buu.ac.th"
